update debuild rule

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+opennccframe (22.09.01) unstable; urgency=medium
+
+  * R22.09.01 (Closes: #nnnn)  <nnnn is the bug number of your ITP>
+
+ -- Zed <zhangdi@eyecloud.tech>  Wed, 7 Sept 2022 14:37:11 +0800
 opennccframe (22.02.01) unstable; urgency=medium
 
   * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>
